changed file name in router folder to router.js, also changed filenmae in controllers folder to controller.js

--- a/app/config/config.json
+++ b/app/config/config.json
@@ -2,8 +2,8 @@
 
     "development": {
         "username": "root",
-        "password": "pwd",
-        "database": "BOPO",
+        "password": "Root",
+        "database": "bopo",
         "host": "127.0.0.1",
         "dialect": "mysql"
     },
